--- a/src/PaginaInicial.css
+++ b/src/PaginaInicial.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background-color: #f0f0f0;
+  color: #333;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
